--- a/index.css
+++ b/index.css
@@ -1,16 +1,17 @@
 .move {
-    margin-right: 13em;
+    /* margin-right: 15em; */
     /* text-align: center; */
     overflow-y: auto;
     position: absolute;
     cursor: move;
-    margin-left: 13em;
-    margin-top: 15vh;
+    /* margin-left: 12em; */
+    margin-top: 10vh;
 }
 
 .move.bg1 {
+    vertical-align: middle;
     width: 660px;
-    height: 500px;
+    height: 530px;
     /* top: 40vmin;
     right: 50vmin; */
     position: fixed;
@@ -25,4 +26,20 @@
 
 .toast-header {
     background-color: rgba(255, 200, 200, 0.72) !important;
+}
+
+.like-table {
+    display: table-cell;
+}
+
+.like-table {
+    vertical-align: middle;
+}
+
+@media only screen and (max-width: 990px) {
+    .toast {
+        max-width: 440px !important;
+        margin: 0 auto;
+        box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, .2) !important;
+    }
 }
